manifests/tf2-vanilla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf2-vanilla
  labels:
    app: tf2-vanilla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf2-vanilla
  template:
    metadata:
      labels:
        app: tf2-vanilla
    spec:
      securityContext:
        fsGroup: 2000 
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: tf2-vanilla-store
      containers:
      - name: tf2-vanilla
        image: cm2network/tf2:latest
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - mountPath: "/home/steam/tf-dedicated"
          name: volume
        ports:
        - containerPort: 27015
        - containerPort: 27020
---
apiVersion: v1
kind: Service
metadata:
  name: tf2-vanilla
  labels:
    run: tf2-vanilla
spec:
  type: NodePort
  ports:
  - port: 27015
    protocol: TCP
    name: rcon
  - port: 27015
    protocol: UDP
    name: game
  - port: 27020
    protocol: UDP
    name: sourcetv
  selector:
    run: tf2-vanilla
