manifests/tsuro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsuro
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsuro
  template:
    metadata:
      labels:
        app: tsuro
    spec:
      containers:
      - name: tsuro
        image: ghcr.io/pl4nty/tsuro:latest
        ports:
        - containerPort: 80
        resources:
          # at idle
          requests:
            memory: 175Mi
            cpu: 20m
          limits:
            memory: 1Gi # reached 850Mi in UAT, possibly 500Mi per user
            cpu: 1500m # during AI moves
---
apiVersion: v1
kind: Service
metadata:
  name: tsuro
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 80
  selector:
    app: tsuro
