manifests/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: cert-manager
  name: cert-manager
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2$3$4
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/preserve-host: "false"
spec:
  tls:
  - hosts:
    - lab.tplant.com.au
    secretName: tls-secret
  rules:
  - host: lab.tplant.com.au
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: tsuro
          servicePort: 80
        path: /tsuro(/|$)(.*)
      - backend:
          serviceName: tsuro
          servicePort: 80
        path: /(jpro|app)(/|$)(.*)
