manifests/spotify-public-likes.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spotify-public-likes
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://spotify-public-likes.azurewebsites.net/
spec:
  rules:
  - host: lab.tplant.com.au
    http:
      paths:
      - backend:
          serviceName: spotify-public-likes
          servicePort: 80
        path: /spotify(/|$)(.*)
